--- a/package.json
+++ b/package.json
@@ -4,22 +4,18 @@
     "description": "[![Build Status](https://travis-ci.org/laravel/framework.svg)](https://travis-ci.org/laravel/framework) [![Total Downloads](https://poser.pugx.org/laravel/framework/d/total.svg)](https://packagist.org/packages/laravel/framework) [![Latest Stable Version](https://poser.pugx.org/laravel/framework/v/stable.svg)](https://packagist.org/packages/laravel/framework) [![Latest Unstable Version](https://poser.pugx.org/laravel/framework/v/unstable.svg)](https://packagist.org/packages/laravel/framework) [![License](https://poser.pugx.org/laravel/framework/license.svg)](https://packagist.org/packages/laravel/framework)",
     "author": "Family Tree 365",
     "scripts": {
-        "serve": "npx-run-script-os",
+        "serve": "vue-cli-service serve",
         "serve:default": "vue-cli-service serve",
         "serve:windows": "node_modules\\.bin\\vue-cli-service serve",
-        "build": "npx run-script-os",
+        "build": "rm -rf ../public/{js,themes,themes-rtl,images} && vue-cli-service build --no-clean && rm -rf ../public/js/*.map",
         "build:default": "rm -rf ..\\/public/{js,themes,themes-rtl,images} && vue-cli-service build --no-clean ",
         "build:windows": "cd ../public && rd /s /q index.html & rd /s /q js & rd /s /q themes & rd /s /q themes-rtl & rd /s /q images & cd ../client && node_modules\\.bin\\vue-cli-service lint & cross-env NODE_ENV=production node_modules\\.bin\\vue-cli-service build --no-clean --modern --skip-plugins thread-loader",
-        "dev": "npx run-script-os",
+        "dev": "rm -rf ../public/{js,themes,themes-rtl,images} && vue-cli-service build --no-clean --mode development",
         "dev:default": "rm -rf ../public/{js,themes,themes-rtl,images} && vue-cli-service build --no-clean --mode development",
         "dev:windows": "cd ../public && rd /s /q index.html && rd /s /q js & rd /s /q themes & rd /s /q themes-rtl & rd /s /q images & cd ../client && node_modules\\.bin\\vue-cli-service lint & cross-env NODE_ENV=development node_modules\\.bin\\vue-cli-service build --no-clean --mode development --skip-plugins thread-loader",
-        "lint": "npx run-script-os",
+        "lint": "vue-cli-service lint",
         "lint:default": "vue-cli-service lint",
         "lint:windows": "node_modules\\.bin\\vue-cli-service lint",
-        "serve": "vue-cli-service serve",
-        "build": "rm -rf ../public/{js,themes,themes-rtl,images} && vue-cli-service build --no-clean && rm -rf ../public/js/*.map",
-        "dev": "rm -rf ../public/{js,themes,themes-rtl,images} && vue-cli-service build --no-clean --mode development",
-        "lint": "vue-cli-service lint",
         "postinstall": "opencollective-postinstall && patch-package",
         "prod": "npm run build"
     },
@@ -27,6 +23,7 @@
     "dependencies": {
         "@enso-ui/accessories": "^4.0",
         "@enso-ui/activity-log": "^5.0",
+        "@enso-ui/bulma": "^5.0.7",
         "@enso-ui/calendar": "^5.0",
         "@enso-ui/charts": "^4.0",
         "@enso-ui/comments": "^4.0",
